# nanoplastics_vs_VE-cadherin

./: README.md
data/PS10/1.6/: plastic_contacts.npy
data/PS10/2.1/: plastic_contacts.npy
data/PS10/2.6/: plastic_contacts.npy
data/PS10/3.1/: plastic_contacts.npy
data/PS10/3.6/: plastic_contacts.npy
data/PS10/4.1/: plastic_contacts.npy
data/PS10/4.6/: plastic_contacts.npy
data/PS10/5.1/: plastic_contacts.npy
data/PS10/5.6/: plastic_contacts.npy
data/PS10/6.1/: plastic_contacts.npy
data/PS10/6.6/: plastic_contacts.npy
data/PS20/1.6/: plastic_contacts.npy
data/PS20/2.1/: plastic_contacts.npy
data/PS20/2.6/: plastic_contacts.npy
data/PS20/3.1/: plastic_contacts.npy
data/PS20/3.6/: plastic_contacts.npy
data/PS20/4.1/: plastic_contacts.npy
data/PS20/4.6/: plastic_contacts.npy
data/PS20/5.1/: plastic_contacts.npy
data/PS20/5.6/: plastic_contacts.npy
data/PS20/6.1/: plastic_contacts.npy
data/PS20/6.6/: plastic_contacts.npy
data/PS40/1.6/: plastic_contacts.npy
data/PS40/2.1/: plastic_contacts.npy
data/PS40/2.6/: plastic_contacts.npy
gp_setup/: all_points_except_1.6.csv  bq_data.txt  cadherin_figure_making_paper.py  cadherin_runner_fes_blind_10_20.py  cadherin_setup.py  environment_buq.yml  pyproject.toml
gp_setup/buq/: README.md  __init__.py  bq_runner.py  integration.py  kernels.py  systems.py
gp_setup/buq/sample_systems/: __init__.py  mock.py
gp_setup/figures/: optuna_trial_results.csv
gp_setup/results_optunasearch_RBF_all_points_blind10_20_fes_obj_0_40/: optuna_study.pkl  optuna_trial_results.csv
(+8 files in other folders)
