[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "buq"
version = "0.1.0"
description = "Bayesian quadrature for free energy surfaces"
readme = "README.md"
requires-python = ">=3.9"
license = { text = "UvA" }  

authors = [
  { name = "Eline Kempkes", email = "e.k.kempkes@uva.nl" }
]

dependencies = [
  "numpy>=1.23",
  "scipy>=1.10",
  "matplotlib>=3.7",
  "emukit>=0.4.11",
  "gpy>=1.13.2",
  "paramz>=0.9.6",
]

[project.urls]
homepage = "https://github.com/computational-chemistry-uva/BUQ"
repository = "https://github.com/computational-chemistry-uva/BUQ"

[tool.setuptools.packages.find]
where = ["."]
include = ["buq"]